# DariusHeaderTool

./: .gitignore  CMakeLists.txt  README.md
DariusGenerator/: CMakeLists.txt  GetPropertyCodeGen.h  GetSetCGM.h  ReflectionBaseCodeGen.h  ReflectionClassCodeGen.h  ReflectionEnumCodeGen.h  ReflectionStructCodeGen.h  RegistrationBaseCodeGen.h  ResourcePropertyCodeGen.h  SetPropertyCodeGen.h  Utils.hpp  main.cpp
Kodgen/: CMakeLists.txt  KodgenSettings.toml
Kodgen/Include/Kodgen/CodeGen/: CodeGenUnitSettings.h  GeneratedFile.h
Kodgen/Include/Kodgen/InfoStructures/: EntityInfo.h  StructClassInfo.h
Kodgen/Include/Kodgen/Parsing/: FileParser.h  ParsingSettings.h
Kodgen/Include/Kodgen/Parsing/ParsingResults/: FileParsingResult.h
Kodgen/Source/CodeGen/: GeneratedFile.cpp
Kodgen/Source/CodeGen/Macro/: MacroCodeGenUnit.cpp
Kodgen/Source/InfoStructures/: EntityInfo.cpp  NestedEnumInfo.cpp  NestedStructClassInfo.cpp
Kodgen/Source/Parsing/: FileParser.cpp  ParsingSettings.cpp
Test/: TestStruct.hpp
